--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.4",
     "@fontsource-variable/inter-tight": "^5.1.1",
+    "@phosphor-icons/react": "^2.1.7",
     "astro": "^5.1.3",
     "tailwindcss": "^3.4.17"
   }
